--- a/src/main/resources/Properties/DB.Properties
+++ b/src/main/resources/Properties/DB.Properties
@@ -1,7 +1,7 @@
-host=devdb.kh3ira.com
-testuser=AutomationTest
+host=prismdev.qkhpp.mongodb.net
+testuser=test
 stageuser=AutomationStage
 testDB=iratest
 stageDB=irastage
-testpassword=AutomationTest
+testpassword=QyTymD7VWiFTbQTc
 stagepassword=AutomationStage
