Updated Database and fixed Trial User Methods

--- a/src/main/resources/Properties/DB.Properties
+++ b/src/main/resources/Properties/DB.Properties
@@ -1,7 +1,7 @@
 host=prismdev.qkhpp.mongodb.net
-testuser=test
+testuser=prismdevadmin
 stageuser=AutomationStage
 testDB=iratest
 stageDB=irastage
-testpassword=QyTymD7VWiFTbQTc
+testpassword=Y8aembJFy8yqaOsT
 stagepassword=AutomationStage
